--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -9,7 +9,7 @@
 .first-screen {
   max-height: 980px;
   height: 100%;
-  padding: 50px 150px 0px 150px;
+  padding: 50px 280px 0px 280px;
   background-image: linear-gradient(#1daa7d, #005f55);
 }
 
@@ -277,7 +277,7 @@
   margin-right: 200px;
 }
 
-button {
+.btn {
   width: 100%;
   max-height: 50px;
   max-width: 264px;
@@ -302,4 +302,294 @@ button {
   background-position: center;
   height: 24px;
   width: 25px;
+}
+
+.modal {
+  max-width: 1100px;
+  max-height: 800px;
+  background-color: #005f54;
+  border: 2px solid transparent;
+  border-radius: 15px;
+  display: block;
+  left: 20%;
+  top: 10%;
+}
+
+.photo-card {
+  width: 756px;
+  border: solid 8px white;
+  border-radius: 15px;
+}
+
+.photo-columns {
+  margin-left: 60px;
+}
+
+.legenda {
+  width: 100%;
+  color: white;
+  max-width: 600px;
+  margin-top: 20px;
+}
+
+.coluna-fotos {
+  display: flex;
+  flex-direction: column;
+}
+
+.photo-1-1970 {
+  background: url("../../assets/1970/miniatura-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-2-1970 {
+  background: url("../../assets/1970/miniatura-2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-3-1970 {
+  background: url("../../assets/1970/miniatura-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-4-1970 {
+  background: url("../../assets/1970/miniatura-4.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-1-1980 {
+  background: url("../../assets/1980/miniatura-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-2-1980 {
+  background: url("../../assets/1980/miniatura-2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-3-1980 {
+  background: url("../../assets/1980/miniatura-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-4-1980 {
+  background: url("../../assets/1980/miniatura-4.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-1-1990 {
+  background: url("../../assets/1990/miniatura-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-2-1990 {
+  background: url("../../assets/1990/miniatura-2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-3-1990 {
+  background: url("../../assets/1990/miniatura-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-4-1990 {
+  background: url("../../assets/1990/miniatura-4.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-1-2000 {
+  background: url("../../assets/2000/miniatura-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-2-2000 {
+  background: url("../../assets/2000/miniatura-2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-3-2000 {
+  background: url("../../assets/2000/miniatura-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-4-2000 {
+  background: url("../../assets/2000/miniatura-4.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-1-2010 {
+  background: url("../../assets/2010/miniatura-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-2-2010 {
+  background: url("../../assets/2010/miniatura-2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-3-2010 {
+  background: url("../../assets/2010/miniatura-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-4-2010 {
+  background: url("../../assets/2010/miniatura-4.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-1-2020 {
+  background: url("../../assets/2020/miniatura-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-2-2020 {
+  background: url("../../assets/2020/miniatura-2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-3-2020 {
+  background: url("../../assets/2020/miniatura-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.photo-4-2020 {
+  background: url("../../assets/2020/miniatura-4.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.BrainhubCarousel__dots {
+  flex-direction: column;
+  margin-left: 20px;
+  height: 570px;
+  justify-content: space-evenly;
+}
+
+.BrainhubCarousel__dots .BrainhubCarousel__thumbnail {
+  padding: 0;
+  opacity: 0.5;
+  background: transparent;
+}
+
+.BrainhubCarousel__dots .BrainhubCarousel__thumbnail:hover {
+  opacity: 0.5;
 }
