--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -888,6 +888,65 @@ a:hover {
   }
 }
 
+@media only screen and (max-width: 567px) {
+  .modal {
+    max-height: 90%;
+    max-width: 100%;
+    margin-left: 0;
+    margin-top: 0;
+  }
+
+  #simple-modal-title {
+    display: none !important;
+  }
+
+  .modal-padding {
+    padding: 25px 0px !important;
+  }
+
+  .legenda {
+    margin-top: -220px;
+  }
+
+  .top-modal {
+    display: block !important;
+  }
+
+  .photo-columns {
+    margin-left: 0;
+  }
+
+  .coluna-fotos {
+    display: block;
+  }
+
+  .coluna-fotos, .BrainhubCarousel__dots {
+    flex-direction: row;
+  }
+
+  .BrainhubCarousel__dots {
+    justify-content: space-around;
+    margin-left: 0;
+    height: 100%;
+    margin-top: 116px;
+  }
+
+  .photo-1-1970, .photo-2-1970, .photo-3-1970, .photo-4-1970,
+  .photo-1-1980, .photo-2-1980, .photo-3-1980, .photo-4-1980,
+  .photo-1-1990, .photo-2-1990, .photo-3-1990, .photo-4-1990,
+  .photo-1-2000, .photo-2-2000, .photo-3-2000, .photo-4-2000,
+  .photo-1-2010, .photo-2-2010, .photo-3-2010, .photo-4-2010,
+  .photo-1-2020, .photo-2-2020, .photo-3-2020, .photo-4-2020 {
+    height: 100px;
+    width: 100px;
+  }
+
+  .legenda {
+    margin-top: -206px;
+    margin-left: 10px;
+  }
+}
+
 /*@media only screen and (max-width: 483px) {
   .anos2000 {
     font-size: 12px !important;
